# spbpu-labs

./: .gitignore
ai_systems/1/: z1.py  z2.py  z3.py  z4.py  z5.py  z6.py
archsys/1course/: CMakeLists.txt  imgui.ini  program.example.txt  readme.md
archsys/1course/cmake/: functions.cmake
archsys/1course/include/: abstractBuffer.hpp  abstractDevice.hpp  abstractDiscipline.hpp  abstractProducer.hpp  abstractRequest.hpp  buffer.hpp  configuration.hpp  device.hpp  disciplines.hpp  priority.hpp  producer.hpp  request.hpp
archsys/1course/include/gui/: mode_layouts.hpp
archsys/1course/include/utils/: idSetter.hpp
archsys/1course/src/: buffer.cpp  configuration.cpp  device.cpp  disciplines.cpp  disciplines.hpp  main.cpp  mainLogic.cpp  mainLogic.hpp  priority.hpp  producer.cpp  producer.hpp  request.cpp  request.hpp
archsys/1course/src/gui/: mode_layouts.cpp  mode_layouts.hpp
archsys/1course/src/utils/: circled_operations.cpp  circled_operations.hpp  idSetter.hpp
archsys/1course/test/: mainTest.cpp
asm/1/: main.cpp
comparch/: course.asm
comparch/asm/1/: bmp.cpp
course/: CMakeLists.txt  main.cpp
course/mathlib/: complex.c
db/1/: init.sh  legacy_create_tables.sql  report.odt
db/1sem/1/: create_backup.sh  create_tables.sql  drop_db.sql  drop_tables.sql  insert_deafult.sql  load_backup.sh
db/1sem/2/: do_modify.sql
db/1sem/3/: triggers.sql
db/1sem/course/: CMakeLists.txt  init.sh
db/1sem/course/include/: assign_work.hpp  login.hpp  read_config.hpp  user_token.hpp
db/1sem/course/sql/: create_db.sql
db/2/: do_delete.sql  do_insert.sql  do_modify.sql  do_select.sql  do_things.sh
db/2sem/1.4/: chec_ser2.sql  check_nonrepeatable_read1.sql  check_nonrepeatable_read12.sql  check_nonrepeatable_read2.sql  check_phantom1.sql  check_phantom12.sql  check_phantom2.sql  check_ser.sql  serialize.sql  set_commited_read.sql
db/2sem/2.1/: colories.txt  create_role.sql  create_user.sql  create_views.sql  delete_newly_inserted.sql  grant_tables.sql  test_insert.sql  test_role.sql  test_user.sql  view_insert.sql  views.sql
db/2sem/3.1/: analize_draft.sql  clean.sh  constraints.sql  create_db.sql  disable_indexes.sql  drop_db.sql  generate_values.sql  generator.sql  indexes.sql  setup.sh  test.sh
db/2sem/3.2/: A_existance.sql  B_index_call.sql  C_function_call.sql  D_jsonpath.sql  create_db.sql  drop_db.sql  parse_file.sql  parser.sql  plot_timing.sql  setup.sh  table_update.sql
db/3/: cursors.sql  procedures.sql  triggers.sql  views.sql
db/course/: CMakeLists.txt  compile_commands.json  imgui.ini
db/course/include/: assign_work.hpp  get_column_values.hpp  mainLogic.hpp  table_operations.hpp
db/course/include/gui/: call_error_window.hpp  statistics_tab.hpp  work_assignment_tab.hpp
db/course/sql/: create_tables.sql  init.sh  set_connections.sql
db/course/sql/procedures/: get_score_table.sql  register_user.sql  sum_up_costs.sql
db/course/sql/triggers/: forbid_more_than_ten_masters.sql  forbid_non_unique.sql  forbid_overwork.sql
db/course/src/: assign_work.cpp  login.cpp  mainLogic.cpp  read_config.cpp  table_operations.cpp
db/course/src/gui/: call_login_window.cpp  clickable_table.cpp  get_column_values.cpp  statistics_tabs.cpp  table_interaction.cpp
devops/mail/: CMakeLists.txt  CMakePresets.json  readme.md
devops/mail/src/client/: main_logic.cpp
devops/mail/src/server/: main_logic.cpp  main_logic.hpp
devops/mail/src/smtp/: main.cpp  main_logic.cpp
java/course2/: pom.xml
java/lab1/src/: Main.java
java/lab1mvn/: pom.xml
java/lab2/src/: Main.java
java/lab2mvn/: pom.xml
lab1/: ImpulseGenRTL.h  main.cpp
lab2/: main.cpp  matrix.hpp
lab2/mathlib/: fitpoly.c
lab3/: CMakeLists.txt  main.cpp
lab3/mathlib/: invert.c  stint.c
math/lab2/: CMakeLists.txt
math/lab2/mathlib/: bandfac.c  cheby.c  fft.c  poly.c  zeroin.c
math/lab3/mathlib/: bspline.c  cmplx.c  dft.c  qags.c
math/mmcourse/: CMakeLists.txt  labDefinitions.cpp  labDefinitions.hpp
math/mmcourse/mathlib/: CMakeLists.txt  qinf.c  qk21.c  qr.c  rkf45.c  tridiag.c
matlog/: CMakeLists.txt  backup_out.txt  constraints.example.ini  constraints_nosplit.example.ini  get_var.py  initial_task.ini  out.txt  single_file.cpp  values.txt
matlog/include/: constraints.hpp  delimiter.hpp  main_logic.hpp
matlog/src/: constraints.cpp  main.cpp  main_logic.cpp
merge/: a.out  merge  merge.v  merge2.v  merge_tb.v  verilog-display-tasks.html
microelectronics/: bttmupmerge.c  mergeSort.c
microelectronics/lab1/: CMakeLists.txt  ImpulseGenRTL.cpp
microelectronics/merge/: bttmupmerge.cpp  merge.vcd  top.v  top_tb.v
microelectronics/systemcIZ/: .gitignore  CMakeLists.txt  controller.cpp  controller.h  controller_test.cpp
mmcourse/: main.cpp
mmcourse/mathlib/: zerov.c
opsystems/1/a/: CMakeLists.txt  compile_commands.json
opsystems/1/a/src/: main.c
opsystems/1/b/: CMakeLists.txt  compile_commands.json
opsystems/1/include/: lab1utils.h
opsystems/1/src/: lab1utils.c  main.c
opsystems/2/: CMakeLists.txt  compile_commands.json  ps_out.txt
opsystems/2/include/: father.h  lab2utils.h  son.h
opsystems/2/src/: father.c  relation.c  son.c
opsystems/5/a/: CMakeLists.txt  compile_commands.json
opsystems/5/a/include/: shmem.h
opsystems/5/a/src/: client.c  server.c
opsystems/lib/explicit/: build_app.sh  dl  dl.c
opsystems/lib/implicit/: binary  build_shared.sh  build_static.sh  g_world.c  h_world.c  main.c  world.h
opsystems/synchro/1/: CMakeLists.txt
opsystems/synchro/1/include/: shmem.h
opsystems/synchro/1/src/: client.c  server.c
opsystems/synchro/2/: CMakeLists.txt  compile_commands.json
opsystems/virt/2/: CMakeLists.txt  debug.h  sec.c  unset.c
opsystems/vzaim/a/: CMakeLists.txt
optimzationofshit/prac9/: grad.py
optimzationofshit/rosenbrok/: main.py
systemcIZ/: controller_test.h  main.cpp
teorver/shit/: appro.py  area_prob.py  figure.py  inversionsIncourse.py  kr3.py  magazin.py  quantiles.py  s1.py  tri.py  vampires.py  visiteurs.py  werewolves.py
tps/: algo.py  ruff.toml  test.py
z4/: CMakeLists.txt  main.cpp
(+50 files in other folders)
